[gd_scene load_steps=4 format=3 uid="uid://14uwrn3e6yy6"]

[ext_resource type="Script" uid="uid://ure31rklyiwf" path="res://scripts/cards/deck_ui.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://vl0mjpdp7k02" path="res://textures/card.png" id="2_card"]
[ext_resource type="Texture2D" uid="uid://7dk86v8ywok0" path="res://textures/card-drop.png" id="3_slot"]

[node name="DeckUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="DeckContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -834.0
offset_top = -613.0
offset_right = -564.0
offset_bottom = -213.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 2

[node name="DeckWrapper" type="Control" parent="DeckContainer"]
custom_minimum_size = Vector2(270, 180)
layout_mode = 2

[node name="DeckButton" type="TextureButton" parent="DeckContainer/DeckWrapper"]
custom_minimum_size = Vector2(180, 270)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -135.0
offset_right = 90.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(90, 135)
texture_normal = ExtResource("2_card")
ignore_texture_size = true
stretch_mode = 5

[node name="DeckCount" type="Label" parent="DeckContainer/DeckWrapper/DeckButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(90, 135)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlotWrapper" type="Control" parent="DeckContainer"]
custom_minimum_size = Vector2(270, 180)
layout_mode = 2

[node name="ActiveSlot" type="TextureRect" parent="DeckContainer/SlotWrapper"]
custom_minimum_size = Vector2(180, 270)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -135.0
offset_right = 90.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(90, 135)
texture = ExtResource("3_slot")
expand_mode = 1
stretch_mode = 5

[node name="ActiveCardContainer" type="Control" parent="DeckContainer/SlotWrapper/ActiveSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DeckButton" type="TextureButton" parent="DeckContainer"]
visible = false
custom_minimum_size = Vector2(180, 270)
layout_mode = 2
texture_normal = ExtResource("2_card")
ignore_texture_size = true
stretch_mode = 5

[node name="DeckCount" type="Label" parent="DeckContainer/DeckButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(90, 135)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActiveSlot" type="TextureRect" parent="DeckContainer"]
visible = false
custom_minimum_size = Vector2(180, 270)
layout_mode = 2
texture = ExtResource("3_slot")
expand_mode = 1
stretch_mode = 5

[node name="ActiveCardContainer" type="Control" parent="DeckContainer/ActiveSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
